# bootc

./: .bootc-dev-infra-commit.txt  .dockerignore  .packit.yaml  ADOPTERS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cfsuki  Dockerfile.sdboot  Justfile  MAINTAINERS.md  Makefile  README.md  deny.toml  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: autovendor.yml  build-and-publish.yml  ci.yml  crates-release.yml  docs.yml  e2e.yml  integration.yml  openssf-scorecard.yml  rebase.yml  release.yml  scheduled-release.yml
contrib/packaging/: bootc.spec  configure-rootfs  configure-systemdboot  configure-variant  fedora-extra.txt  install-buildroot  install-rpm-and-setup  seal-uki  switch-to-sdboot
crates/blockdev/: Cargo.toml
crates/cli/: Cargo.toml
crates/etc-merge/: Cargo.toml
crates/initramfs/: Cargo.toml
crates/initramfs/src/: lib.rs
crates/lib/: Cargo.toml
crates/mount/: Cargo.toml
crates/ostree-ext/: Cargo.toml
crates/system-reinstall-bootc/: Cargo.toml
crates/sysusers/: Cargo.toml
crates/tests-integration/: Cargo.toml
crates/tmpfiles/: Cargo.toml
crates/utils/: Cargo.toml
crates/xtask/: Cargo.toml
docs/: Dockerfile.mdbook
docs/src/: SUMMARY.md  bootc-install.md  experimental-composefs.md  experimental-unified-storage.md  host-v1.schema.json  internals.md  upgrades.md
hack/: Containerfile  Containerfile.packit  build-sealed  compute-composefs-digest  os-image-map.json  packages.txt  provision-derived.sh  provision-packit.sh
tests/: build-sealed  gating.sh  run-tmt.sh
tmt/: README.md
(+122 files in other folders)
